<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carebt_kb</name>
  <version>0.0.0</version>
  <description>A ROS2 Knowledge Base implementation.</description>
  <maintainer email="steck.andi@gmail.com">Andreas Steck</maintainer>
  <license>Apache License 2.0</license>

  <depend>carebt_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclpy_message_converter</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
